P01/Tests/SyntaxErrors/badalphasize1.tm
states 3
I
A -
B +
alphabet -1
